add images folder

--- a/Workshops/Coding a Game in Python/Part 1 - Setting Up the Environment/part1.slides.html
+++ b/Workshops/Coding a Game in Python/Part 1 - Setting Up the Environment/part1.slides.html
@@ -14101,7 +14101,7 @@ div.jp-OutputPrompt {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Coding-a-Game-in-Python!">Coding a Game in Python!<a class="anchor-link" href="#Coding-a-Game-in-Python!">&#182;</a></h1><h2 id="Girls-Who-Code-@-UCSD-3-part-workshop">Girls Who Code @ UCSD 3-part workshop<a class="anchor-link" href="#Girls-Who-Code-@-UCSD-3-part-workshop">&#182;</a></h2><p><br/>
 <br/></p>
-<p><img src="tetris.png" alt="tetris" width="400"/></p>
+<p><img src="images/tetris.png" alt="tetris" width="400"/></p>
 
 </div>
 </div></section></section><section><section>
@@ -14161,13 +14161,13 @@ div.jp-OutputPrompt {
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="overview.png" alt="overview" width="900"/></p>
+<p><img src="images/overview.png" alt="overview" width="900"/></p>
 
 </div>
 </div></div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="virtualmachine.png" alt="virtualmachine" width="900"/></p>
+<p><img src="images/virtualmachine.png" alt="virtualmachine" width="900"/></p>
 
 </div>
 </div></section></section><section><section>
@@ -14175,12 +14175,7 @@ div.jp-OutputPrompt {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="2.-Install-Interpreter">2. Install Interpreter<a class="anchor-link" href="#2.-Install-Interpreter">&#182;</a></h2><p><br/>
 <br/></p>
-<p><img src="vscode.png" alt="vscode" width="700"/></p>
-
-</div>
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="images/vscode.png" alt="vscode" width="700"/></p>
 
 </div>
 </div></section><section>
@@ -14189,11 +14184,6 @@ div.jp-OutputPrompt {
 <h3 id="VS-Code">VS Code<a class="anchor-link" href="#VS-Code">&#182;</a></h3>
 </div>
 </div><div class="fragment">
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-
-</div>
-</div></div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <ul>
@@ -14251,8 +14241,8 @@ div.jp-OutputPrompt {
 </div></div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Install-VSCode's-Python-Extension">Install VSCode's Python Extension<a class="anchor-link" href="#Install-VSCode's-Python-Extension">&#182;</a></h3><p><img src="ext2.png" alt="ext2" width="300"/></p>
-<p><img src="ext1.png" alt="ext1" width="500"/></p>
+<h3 id="Install-VSCode's-Python-Extension">Install VSCode's Python Extension<a class="anchor-link" href="#Install-VSCode's-Python-Extension">&#182;</a></h3><p><img src="images/ext2.png" alt="ext2" width="300"/></p>
+<p><img src="images/ext1.png" alt="ext1" width="500"/></p>
 
 </div>
 </div></section></section><section><section>
@@ -14311,8 +14301,8 @@ We now need to install a Python interpreter.</p>
 <ul>
 <li>Navigate back to the VSCode app, and select View --&gt; Command Palette from the toolbar at the top
 <br/>
-<img src="cp1.png" alt="commandpalette" width="300"/>
-<img src="cp2.png" alt="commandpalette" width="600"/></li>
+<img src="images/cp1.png" alt="commandpalette" width="300"/>
+<img src="images/cp2.png" alt="commandpalette" width="600"/></li>
 </ul>
 
 </div>
@@ -14325,17 +14315,12 @@ We now need to install a Python interpreter.</p>
 </ul>
 
 </div>
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-
-</div>
 </div></div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="4.-Install-Relevant-Packages/Libraries">4. Install Relevant Packages/Libraries<a class="anchor-link" href="#4.-Install-Relevant-Packages/Libraries">&#182;</a></h2><p><br/>
 <br/>
-<img src="packages.jpg" alt="packages" width="650"/></p>
+<img src="images/packages.jpg" alt="packages" width="650"/></p>
 
 </div>
 </div></section><section>
@@ -14380,8 +14365,8 @@ We now need to install a Python interpreter.</p>
 <li>Navigate to the VSCode app toolbar, and select 'Terminal'</li>
 <li>Open a new Terminal 
 <br/>
-<img src="term3.png" alt="terminal3" width="450"/>
-<img src="term1.png" alt="terminal" width="650"/></li>
+<img src="images/term3.png" alt="terminal3" width="450"/>
+<img src="images/term1.png" alt="terminal" width="650"/></li>
 </ul>
 
 </div>
@@ -14453,6 +14438,20 @@ We now need to install a Python interpreter.</p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div></section></section>
 </div>
 </div>
