--- a/Workshops/Coding a Game in Python/Part 2 - Python Basics/part2.slides.html
+++ b/Workshops/Coding a Game in Python/Part 2 - Python Basics/part2.slides.html
@@ -14297,7 +14297,9 @@ div.jp-OutputPrompt {
 </div></div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="What-are-Python-libraries/packages?">What are Python libraries/packages?<a class="anchor-link" href="#What-are-Python-libraries/packages?">&#182;</a></h3>
+<h3 id="What-are-Python-libraries/packages?">What are Python libraries/packages?<a class="anchor-link" href="#What-are-Python-libraries/packages?">&#182;</a></h3><p><br/>
+<br/></p>
+
 </div>
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -14333,8 +14335,7 @@ div.jp-OutputPrompt {
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><p><br/></p>
-<ul>
+<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><ul>
 <li>A tetris interface<ul>
 <li>Blocks of different shape, size, color</li>
 <li>Pieces in motion</li>
@@ -14352,8 +14353,7 @@ div.jp-OutputPrompt {
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><p><br/></p>
-<ul>
+<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><ul>
 <li>Scorekeeping, levels, line tallying</li>
 </ul>
 
@@ -14367,8 +14367,7 @@ div.jp-OutputPrompt {
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><p><br/></p>
-<ul>
+<h3 id="Will-help-us-accomplish:">Will help us accomplish:<a class="anchor-link" href="#Will-help-us-accomplish:">&#182;</a></h3><ul>
 <li>Challenging and unpredictable pieces<ul>
 <li>Randomness</li>
 </ul>
@@ -14464,20 +14463,6 @@ Hello from the pygame community. https://www.pygame.org/contribute.html
 <p>Let's code!</p>
 
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
 </div></section></section>
 </div>
 </div>
